--- a/frontend/src/page/answer/Answer.module.css
+++ b/frontend/src/page/answer/Answer.module.css
@@ -54,6 +54,7 @@ margin-top: -45px;
 width: 94%;
 margin-left: 10px;
 }
+
 .answer_form input{
 border-radius: 10px;
 }
@@ -80,4 +81,19 @@ padding: 10px;
     margin: auto;
 }
     
+}
+
+@media screen and (max-width: 460px) {
+    .answer{
+        width: 300px;
+        height: 300px;
+    }
+    .answer_form{
+    width: 220px;
+    margin: auto;
+}
+.answer_form{
+width: 90%;
+margin-left: 5px;
+}
 }
