--- a/frontend/src/page/style.module.css
+++ b/frontend/src/page/style.module.css
@@ -17,6 +17,7 @@
     padding-top: 40px;
     height: 100vh;
     width: 100vw;
+    margin-bottom: 300px;
 }
 .register{
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
